--- a/.github/workflows/autoapi.yml
+++ b/.github/workflows/autoapi.yml
@@ -15,14 +15,14 @@ on:
     types: [started]
    
 jobs:
-  build:
-    runs-on: ubuntu-latest
+   Task:
+    runs-on: ubuntu-22.04
     if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
       uses: actions/checkout@master
     - name: Set up Python #安装python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: 3.8
     - name: Install requests #安装requests
@@ -33,26 +33,26 @@ jobs:
         CONFIG_ID: ${{ secrets.CONFIG_ID }} # secrets_id 提供
         CONFIG_KEY: ${{ secrets.CONFIG_KEY }} # secrets_key 提供
       run: | 
-        cp main.py temp.py
+        cp 1.py 2.py
         echo $CONFIG_ID > configid.txt
         echo $CONFIG_KEY > configkey.txt
-        sed -i '10 r configid.txt' temp.py
-        sed -i '12 r configkey.txt' temp.py
+        sed -i '10 r configid.txt' 2.py
+        sed -i '12 r configkey.txt' 2.py
     - name: Test Api #Api调用
       run: | 
         echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
-        python temp.py
+        python 2.py
     - name: Delete secrets config #删除机密
       run: | 
-        rm -f temp.py
+        rm -f 2.py
         rm -f configid.txt
         rm -f configkey.txt    
     - name: Commit #上传新的refresh_token到仓库
       run: |
-        git config --global user.email zhtok@foxmail.com
-        git config --global user.name MSOfficeAutoSubscribeService
+        git config --global user.email admin@nange.cn
+        git config --global user.name 翠花
         git add .
-        git commit -m "Update new refresh token with MSO_E5_Dev_AutoRenew_Modified" -a
+        git commit -m "update new refresh_token" -a
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
