--- a/.github/workflows/autosubscribeservice.yml
+++ b/.github/workflows/autosubscribeservice.yml
@@ -30,7 +30,7 @@ jobs:
         CONFIG_ID: ${{ secrets.CONFIG_ID }} # secrets_id 提供
         CONFIG_KEY: ${{ secrets.CONFIG_KEY }} # secrets_key 提供
       run: | 
-        cp 1.py 2.py
+        cp main.py 2.py
         echo $CONFIG_ID > configid.txt
         echo $CONFIG_KEY > configkey.txt
         sed -i '10 r configid.txt' 2.py
