--- a/.github/workflows/testApi.yml
+++ b/.github/workflows/testApi.yml
@@ -5,7 +5,7 @@ on:
     types: [published]
   push:
     branches: 
-      - master
+      - main
   schedule:
     - cron: '12 */3 * * *'
   watch:
@@ -17,7 +17,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@main
     - name: Set up Python #安装python
       uses: actions/setup-python@v4
       with:
@@ -51,6 +51,6 @@ jobs:
         git add .
         git commit -m "update new refresh token with testApiBot" -a
     - name: Push changes
-      uses: ad-m/github-push-action@master
+      uses: ad-m/github-push-action@main
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
