--- a/.github/workflows/testApi.yml
+++ b/.github/workflows/testApi.yml
@@ -51,6 +51,6 @@ jobs:
         git add .
         git commit -m "update new refresh token with testApiBot" -a
     - name: Push changes
-      uses: ad-m/github-push-action@main
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
