--- a/.github/workflows/autoTestApi.yml
+++ b/.github/workflows/autoTestApi.yml
@@ -14,7 +14,7 @@ on:
 jobs:
    Task:
     runs-on: ubuntu-22.04
-    if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
+#    if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
       uses: actions/checkout@main
