--- a/.github/workflows/autoTestApi.yml
+++ b/.github/workflows/autoTestApi.yml
@@ -7,7 +7,7 @@ on:
     branches: 
       - main
   schedule:
-    - cron: '30 */3 * * *'
+    - cron: '30 * * * *'
   watch:
     types: [started]
    
